OO-7851: sort the list of questions on load